<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg_page"
    android:windowSoftInputMode="adjustPan"
    android:orientation="vertical"
    tools:context="com.txls.txlashou.home.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_gravity="center"
        android:background="@mipmap/login_logo_icon"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="110dp">
            <EditText
                android:id="@+id/login_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:singleLine="true"
                android:inputType="phone"
                android:maxLength="11"
                android:background="@mipmap/login_bg_et"
                android:textColor="@color/color_white"
                android:textSize="@dimen/activity_text_size"
                android:hint="手机账号"/>
            <ImageView
                android:layout_alignRight="@id/login_phone_num"
                android:layout_marginRight="5dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_icon_user"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:textSize="@dimen/activity_text_size"
                android:singleLine="true"
                android:background="@mipmap/login_bg_et"
                android:textColor="@color/color_white"
                android:inputType="textPassword"
                android:hint="用户密码"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_alignRight="@id/login_password"
                android:layout_marginRight="5dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_icon_pwd"/>


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_gravity="center">

    <Button
        android:id="@+id/login_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_register_text"
        android:background="@mipmap/login_btn_bg"/>
    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_btn_select"
        android:text="@string/app_login_text"/>
</LinearLayout>
    <TextView
        android:id="@+id/login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        android:text="@string/app_login_forget_password"/>


</LinearLayout>
