<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_bg"
    android:orientation="vertical"
    tools:context="com.txls.txlashou.home.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed">
        <ImageView
            android:id="@+id/img_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/btn_return"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_register_text"
            android:textSize="@dimen/activity_reg_text_size"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/app_phone_number"/>

        <EditText
            android:id="@+id/reg_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="right"
            android:hint="请输入手机号码"
            android:maxLength="11"
            android:textSize="@dimen/activity_text_size"
            android:inputType="phone"
            android:textColorHint="@color/color_gray"
            android:textColor="@color/color_black"
            android:background="@null"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_white">
        <EditText
            android:id="@+id/reg_phone_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/color_gray"
            android:paddingLeft="100dp"/>
        <TextView
            android:id="@+id/text_phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/app_phone_code"/>
        <TextView
            android:id="@+id/tv_get_phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            android:text="获取验证码"
            android:textSize="@dimen/activity_text_size"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:textColor="@color/color_phone_code"
            android:background="@mipmap/btn_phone_code"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="设置密码"/>
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="right"
            android:hint="8-16数字与字母组合"
            android:textSize="@dimen/activity_text_size"
            android:textColorHint="@color/color_gray"
            android:textColor="@color/color_black"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="确认密码"/>

        <EditText
            android:id="@+id/edit_password_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="right"
            android:hint="两次输入必须一致"
            android:textSize="@dimen/activity_text_size"
            android:textColorHint="@color/color_gray"
            android:textColor="@color/color_black"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_marginRight="10dp"
            android:layout_gravity="center" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:text="提交即为同意"/>
        <TextView
            android:id="@+id/register_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="《天下分期服务协议》"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:text="内容"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorRed"
        android:text="*手机号码必须为您办理天下分期业务所使用的手机号码"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="提交"
        android:textSize="@dimen/activity_reg_text_size"
        android:background="@mipmap/btn_submit"/>

</LinearLayout>
